Quelques changements mineurs dans les paramètres à tester sur windows

--- a/ManyClassifiers.ipynb
+++ b/ManyClassifiers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
        "[5 rows x 60 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,75 +290,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2784     B2\n",
-      "21571    A1\n",
-      "6940     B1\n",
-      "22193    A1\n",
-      "8359     A2\n",
-      "2232     B2\n",
-      "13095    A2\n",
-      "23095    A1\n",
-      "15962    A1\n",
-      "22485    A1\n",
-      "16951    A1\n",
-      "3460     B1\n",
-      "13994    A2\n",
-      "21315    A1\n",
-      "27257    A1\n",
-      "5027     B1\n",
-      "11275    A2\n",
-      "10210    A2\n",
-      "1353     B2\n",
-      "10779    A2\n",
-      "14666    A2\n",
-      "7849     B1\n",
-      "7834     B1\n",
-      "16328    A1\n",
-      "17391    A1\n",
-      "24111    A1\n",
-      "3718     B1\n",
-      "1787     B2\n",
-      "13220    A2\n",
-      "19844    A1\n",
-      "         ..\n",
-      "5072     B1\n",
-      "2163     B2\n",
-      "6036     B1\n",
-      "6921     B1\n",
-      "6216     B1\n",
-      "16921    A1\n",
-      "26277    A1\n",
-      "2897     B1\n",
-      "24152    A1\n",
-      "18606    A1\n",
-      "10327    A2\n",
-      "18983    A1\n",
-      "17089    A1\n",
-      "14650    A2\n",
-      "19852    A1\n",
-      "6744     B1\n",
-      "15832    A2\n",
-      "15430    A2\n",
-      "14935    A2\n",
-      "14116    A2\n",
-      "22258    A1\n",
-      "20757    A1\n",
-      "24275    A1\n",
-      "9225     A2\n",
-      "21243    A1\n",
-      "13123    A2\n",
-      "19648    A1\n",
-      "9845     A2\n",
-      "10799    A2\n",
-      "2732     B2\n",
-      "Name: level1, Length: 20482, dtype: object\n",
       "Accuracy of Logistic regression classifier on training set: 0.72\n",
       "Accuracy of Logistic regression classifier on test set: 0.73\n"
      ]
@@ -381,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -406,18 +344,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'X_train' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-18dc585a1b29>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mknn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKNeighborsClassifier\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mknn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m print('Accuracy of K-NN classifier on training set: {:.2f}'\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'X_train' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of K-NN classifier on training set: 0.84\n",
+      "Accuracy of K-NN classifier on test set: 0.78\n"
      ]
     }
    ],
